# subscription-to-strategy-converter

./: .gitignore  AGENT.md  CLAUDE.md  CONTEXT.md  DIRECTORY.md  README.md  docker-compose.yml  pyproject.toml
app/: ir.py  main.py
app/api/: community.py  convert.py  system.py
app/core/: config_tree.py  fetcher.py  intent_compiler.py  normalizer.py  parser.py  policy_analyzer.py  policy_catalog.py  policy_graph.py  policy_presets.py  policy_simulator.py  policy_workspace.py  powerfullz.py  profiles.py  renderer.py  rule_packs.py  rule_source_audit.py  sessions.py  subconverter.py  subscription.py  template_engine.py  template_policy_transform.py
app/models/: intent.py  powerfullz.py  request.py  response.py  strategy.py  subconverter.py
app/static/: advanced.html  app.js  flow.css  flow.js  index.html  main.js  styles.css
community_templates/leo/: README.md  audit.json  leo.yaml
docs/: guide.html
docs/adr/: 0001-workspace-first-mihomo-mvp.md  0002-persistent-profiles-and-stale-fallback.md  0003-versioned-claude-rules-with-multi-target-profiles.md  (+7 more)
tests/: test_claude_policy.py  test_claude_template_transform.py  test_community_api.py  test_convert_api.py  test_dedup.py  test_fetcher.py  test_leo_template.py  test_normalizer.py  test_parser.py  test_policy_api.py  test_policy_catalog_categories.py  test_policy_core.py  test_policy_presets.py  test_powerfullz.py  test_profiles.py  test_route_intent.py  test_rule_packs.py  test_rule_source_audit.py  test_singbox.py  test_subconverter.py  test_surge.py  test_surge_parser.py  test_system_status.py  test_ui.py
(+140 files in other folders)
